--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.9",
     "@vitejs/plugin-vue": "^2.0.0",
+    "sass": "^1.48.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
