--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
     "register:components": "vitepress-rc",
-    "ui:npm": "publish",
+    "ui:npm": "npm publish",
     "deploy": "git bash deploy.sh"
   },
   "dependencies": {
